--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ name = "ics_vtimezones"
 version = "2020.1"
 description = "iCalendar vTimezone Data"
 authors = ["Niko Fink <icspy@niko.fink.bayern>"]
-license = "Apache-2.0"
-readme = "README.rst"
-homepage = "https://pypi.org/project/ics/"
-repository = "https://github.com/C4ptainCrunch/ics.py"
+license = "CC0-1.0"
+readme = "README.md"
+homepage = "https://pypi.org/project/ics_vtimezones/"
+repository = "https://github.com/N-Coder/ics_vtimezones"
 documentation = "https://icspy.readthedocs.io/en/stable/"
 keywords = ["ics", "icalendar", "rfc5545", "timezone", "vtimezone"]
 
